# LiveTrackBot

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.base  Dockerfile.code  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
grafana/dashboards/: livetracking_all.json  livetracking_by_channel.json
livetrackbot/: __init__.py  __main__.py  _version.py  bot.py  config.py  livetrackbot.py  pilot.py  point.py
tests/: test_livetrack.py
tests/resources/: json4Others_0.json
