[versioneer]
VCS = git
style = pep440
versionfile_source = livetrackbot/_version.py
versionfile_build = livetrackbot/_version.py
tag_prefix = v
parentdir_prefix = livetrackbot-

[metadata]
description-file = README.md

[flake8]
max-line-length = 100
ignore = F841   # Local variable name is assigned to but never used.
exclude =
    .git,
    venv*,
    versioneer.py,
    livetrackbot/_version.py,
    setup.py
    doc

[tool:pytest]
testpaths = livetrackbot
docstyle_convention = numpy
docstyle_add_ignore = D401
codestyle_max_line_length = 100

[mypy]
ignore_missing_imports=True
no_implicit_optional=True

[mypy-livetrackbot._version]
ignore_errors=True
